Move down #navigation-content to avoid overlapping with the toggle

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -178,12 +178,11 @@ div.main-traversal {
 
     #navigation-content {
       position: absolute;
-      top: 0;
+      top: 32px;
       bottom: 0;
       left: 0;
       right: 0;
       padding: 0;
-      padding-top: 10px;
       max-height: none;
 
       div.home-nav,
